# test-project

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/: main.py  models.py
src/app/: endpoints.py  main.py
tests/: test_main.py
