[project]
name = "test-project"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "K Rebecca Servaites", email = "kathryn.servaites@udri.udayton.edu" },
]

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
app = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^']+)"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.build]
include = [
  "**/*.py",
]




